# console-RPG

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  Report.md  annotated.html  arena.cpp  arena.h  arena_8h_source.html  autotoc_md0.html  callgrind.out.8264  character.cpp  character.h  characterManager.cpp  characterManager.h  character_8h_source.html  character_manager_8h_source.html  check_error.sh  check_units.sh  check_warning.sh  class_arena-members.html  class_arena.html  class_arena_af38eb1fa0343d8afaee9db6773507eb9_icgraph.map  class_arena_af38eb1fa0343d8afaee9db6773507eb9_icgraph.md5  class_character-members.html  class_character.html  class_character__inherit__graph.map  class_character__inherit__graph.md5  class_character_a08f430e8e33743ce66128345c0b5d81d_icgraph.map  class_character_a08f430e8e33743ce66128345c0b5d81d_icgraph.md5  class_character_a18095520ae360be2d6fa1b2abdf2a2bf_icgraph.map  class_character_a18095520ae360be2d6fa1b2abdf2a2bf_icgraph.md5  class_character_a18d0c711bc0c7741287f73cc41595005_icgraph.map  class_character_a18d0c711bc0c7741287f73cc41595005_icgraph.md5  class_character_a3b1bd114c19e845e1bff0a0e8e6225e8_icgraph.map  class_character_a3b1bd114c19e845e1bff0a0e8e6225e8_icgraph.md5  class_character_a52781b38f6bafbf8b8f271bba905d2e4_icgraph.map  class_character_a52781b38f6bafbf8b8f271bba905d2e4_icgraph.md5  (+134 more)
maps/: map.csv
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  (+45 more)
tests/: CMakeLists.txt  CMakeLists.txt.in  unitTests.cpp
tests/wrong_units/: wrong_unit1.json
(+10 files in other folders)
